--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -18,9 +18,10 @@
   color: blue;
 }
 button {
-    border-radius: 4px;
+  border-radius: 4px;
   border: none;
   padding: 5px;
   width: 200px;
   background-color: rgb(233, 138, 138);
+  cursor: pointer;
 }
