--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,3 +32,11 @@
   height: 50%;
   margin-top: 10px;
 }
+
+.icon{
+  color: indianred;
+  margin-right: 150px;
+  margin-top: 15px;
+  font-size: 20px;
+  cursor: pointer;
+}
